--- a/requirements.txt
+++ b/requirements.txt
@@ -75,6 +75,7 @@ pathspec==0.9.0
 pickleshare==0.7.5
 Pillow==9.1.0
 platformdirs==2.5.0
+plotly==5.11.0
 prometheus-client==0.13.1
 prompt-toolkit==3.0.28
 protobuf==3.18.0
